# llsss-ng

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/rlife/: indexed_executor.cpp  indexed_executor.hpp  rule.hpp  solver.hpp  succinct_slice_tree.hpp
tests/: parallel_regression.sh
